--- a/Visualizer/docker-compose.yml
+++ b/Visualizer/docker-compose.yml
@@ -35,6 +35,8 @@ services:
       POSTGRES_USER: warehouse
       POSTGRES_PASSWORD: warehouse
       POSTGRES_DB: warehouse
+    ports:
+      - 5432:5432
     volumes:
       - warehouse-postgres-db-volume:/var/lib/postgresql/data
     healthcheck:
