Visualizer: docker volume to superset config

--- a/Visualizer/docker-compose.yml
+++ b/Visualizer/docker-compose.yml
@@ -10,8 +10,10 @@ services:
       ADMIN_PASSWORD: admin
     ports:
       - 8080:8088
+    volumes:
+      - ./superset_home:/app/superset_home
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8088/health"]
+      test: [ "CMD", "curl", "-f", "http://localhost:8088/health" ]
       interval: 2s
       timeout: 60s
       retries: 20
@@ -40,7 +42,7 @@ services:
     volumes:
       - warehouse-postgres-db-volume:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD", "pg_isready", "-U", "warehouse"]
+      test: [ "CMD", "pg_isready", "-U", "warehouse" ]
       interval: 5s
       retries: 30
       start_period: 5s
