ETL: docker-compose: more env vars

--- a/ETL/.env.example
+++ b/ETL/.env.example
@@ -28,3 +28,27 @@ AIRFLOW_WEBSERVER_PORT=8080
 FLOWER_PORT=5555
 WAREHOUSE_POSTGRES_PORT=5434
 SUPERSET_PORT=8081
+
+# pgAdmin
+PGADMIN_EMAIL=admin@admin.com
+PGADMIN_PASSWORD=admin
+
+# Client Postgres
+CLIENT_POSTGRES_USER=client
+CLIENT_POSTGRES_PASSWORD=client
+CLIENT_POSTGRES_DB=client
+
+# Airflow Postgres
+AIRFLOW_POSTGRES_USER=airflow
+AIRFLOW_POSTGRES_PASSWORD=airflow
+AIRFLOW_POSTGRES_DB=airflow
+
+# Warehouse Postgres
+WAREHOUSE_POSTGRES_USER=warehouse
+WAREHOUSE_POSTGRES_PASSWORD=warehouse
+WAREHOUSE_POSTGRES_DB=warehouse
+
+# Superset
+SUPERSET_ADMIN_USERNAME=admin
+SUPERSET_ADMIN_EMAIL=admin@admin.com
+SUPERSET_ADMIN_PASSWORD=admin
