ETL: Docker compose hostnames in dotenv

--- a/ETL/.env.example
+++ b/ETL/.env.example
@@ -13,6 +13,19 @@ FLOWER_CONTAINER_NAME=flower
 WAREHOUSE_POSTGRES_CONTAINER_NAME=warehouse-postgres
 SUPERSET_CONTAINER_NAME=superset
 
+# Hostnames
+CLIENT_POSTGRES_HOST=client-postgres
+AIRFLOW_POSTGRES_HOST=airflow-postgres
+AIRFLOW_REDIS_HOST=airflow-redis
+AIRFLOW_WEBSERVER_HOST=airflow-webserver
+AIRFLOW_SCHEDULER_HOST=airflow-scheduler
+AIRFLOW_WORKER_HOST=airflow-worker
+AIRFLOW_TRIGGERER_HOST=airflow-triggerer
+AIRFLOW_INIT_HOST=airflow-init
+AIRFLOW_CLI_HOST=airflow-cli
+FLOWER_HOST=flower
+WAREHOUSE_POSTGRES_HOST=warehouse-postgres
+SUPERSET_HOST=superset
 
 # It's all external ports.
 # If you're accessing container from other container 
@@ -23,41 +36,7 @@ SUPERSET_CONTAINER_NAME=superset
 
 CLIENT_PGADMIN_PORT=5050
 CLIENT_POSTGRES_PORT=5454
-AIRFLOW_REDIS_PORTS=6379
-AIRFLOW_WEBSERVER_PORT=8080
-FLOWER_PORT=5555
-WAREHOUSE_POSTGRES_PORT=5434
-SUPERSET_PORT=8081
-
-# pgAdmin
-PGADMIN_EMAIL=admin@admin.com
-PGADMIN_PASSWORD=admin
-
-# Client Postgres
-CLIENT_POSTGRES_USER=client
-CLIENT_POSTGRES_PASSWORD=client
-CLIENT_POSTGRES_DB=client
-
-# Airflow Postgres
-AIRFLOW_POSTGRES_USER=airflow
-AIRFLOW_POSTGRES_PASSWORD=airflow
-AIRFLOW_POSTGRES_DB=airflow
-
-# Warehouse Postgres
-WAREHOUSE_POSTGRES_USER=warehouse
-WAREHOUSE_POSTGRES_PASSWORD=warehouse
-WAREHOUSE_POSTGRES_DB=warehouse
-
-# Superset
-SUPERSET_ADMIN_USERNAME=admin
-SUPERSET_ADMIN_EMAIL=admin@admin.com
-SUPERSET_ADMIN_PASSWORD=admin
-
-# exposed port is for accessing externally
-
-CLIENT_PGADMIN_PORT=5050
-CLIENT_POSTGRES_PORT=5454
-AIRFLOW_REDIS_PORTS=6379
+AIRFLOW_REDIS_PORT=6379
 AIRFLOW_WEBSERVER_PORT=8080
 FLOWER_PORT=5555
 WAREHOUSE_POSTGRES_PORT=5434
